gd_kubernetes_tasks/deploy_kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.1.1
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: config-kibana
          mountPath: /opt/kibana/config/
      volumes:
        - name: config-kibana
          configMap:
            name: config-kibana
