gd_kubernetes_tasks/deploy_redis_slave.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  labels:
    name: redis-slave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-slave
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
      - name: redis-slave
        image: redis
        imagePullPolicy: IfNotPresent
        command: 
          - "redis-server"
        args:
           - "--slaveof"
           - "redis-master" 
           - "6379"
        ports:
        - containerPort: 6379
