gd_kubernetes_tasks/svc-kibana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    component: kibana
spec:
  type:  ClusterIP
  ports:
  - port: 5601
    protocol: TCP
    name: http
  selector:
    app: kibana
