gd_kubernetes_tasks/svc-redis-master.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    component: redis
spec:
  type:  ClusterIP
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis-master
