gd_kubernetes_tasks/svc-redis-slave.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    component: redis
spec:
  type: ClusterIP
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis-slave
