gd_kubernetes_tasks/svc-web-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    component: web-server
spec:
  type: ClusterIP
  ports:
  - port: 8085
    targetPort: 8085
    protocol: TCP
    name: http
  selector:
    app: web-server
