gd_kubernetes_tasks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service
  annotations:
    ingressClassName: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server
                port:
                  number: 8085
    - http:
        paths:
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - http:
        paths:
          - path: /elastic
            pathType: Prefix
            backend:
              service:
                name: elasticsearch
                port:
                  number: 9200
